fix(video, events-list, social-card, map):video controls, events-list break-word, social-card texts doesn’t get cut of on mobile, map event thats off screen is temporary invisible

--- a/src/components/events-list/events-list.less
+++ b/src/components/events-list/events-list.less
@@ -87,7 +87,8 @@
 
 		&--description {
 			font-size: @text-size-smaller;
-			word-break: break-all;
+			word-break: break-all; // Fallback for IE11
+			word-break: break-word;
 		}
 	}
 }
