--- a/src/components/map/map.less
+++ b/src/components/map/map.less
@@ -8,6 +8,7 @@
         padding-top: 141%;
         height: auto;
         overflow: visible;
+        overflow: hidden; // quicke mobile fix
     }
 }
 
@@ -48,7 +49,7 @@
             left: -23%;
         }
     }
-    
+
     &__marker {
         position: absolute;
         transform: translate(-50%, -50%);
