--- a/src/components/social-card/social-card.less
+++ b/src/components/social-card/social-card.less
@@ -6,8 +6,12 @@
     border-radius: 4px;
 
 	&__panel-text {
-		height: 45%;
+		height: 51%;
 		overflow: hidden;
+
+		@media @m {
+			height: 45%;
+		}
 
 		p {
 			line-height: 1.4;
